--- a/.drone.yml
+++ b/.drone.yml
@@ -19,6 +19,15 @@ steps:
       TARGET_ENV: development
     settings:
       repo: josaorg/safepass
+      build_args_from_env:
+        [
+          DRONE_BUILD_NUMBER,
+          DRONE_BUILD_LINK,
+          DRONE_COMMIT_SHA,
+          DRONE_COMMIT_LINK,
+          DRONE_REPO_LINK,
+          DRONE_BUILD_FINISHED,
+        ]
       tags:
         - ${DRONE_COMMIT_SHA}
         - latest
