--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,37 @@
+async-timeout==4.0.3
+attrs==23.2.0
+cffi==1.16.0
+click==8.1.7
+coverage==6.4.1
 cryptography==38.0.4
+Deprecated==1.2.14
+distlib==0.3.8
+fakeredis==1.7.5
+filelock==3.13.1
+flake8==6.0.0
 Flask==2.1.2
+freezegun==1.2.1
+iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+mccabe==0.7.0
+packaging==23.2
+platformdirs==4.2.0
+pluggy==1.4.0
+py==1.11.0
+pycodestyle==2.10.0
+pycparser==2.21
+pyflakes==3.0.1
+pytest==7.1.2
+pytest-cov==3.0.0
+python-dateutil==2.8.2
 redis==4.3.3
+six==1.16.0
+sortedcontainers==2.4.0
+toml==0.10.2
+tomli==2.0.1
+tox==3.25.0
+virtualenv==20.25.0
 Werkzeug==2.1.2
+wrapt==1.16.0
