--- a/.drone.yml
+++ b/.drone.yml
@@ -5,4 +5,4 @@ load: container.jsonnet
 data:
   repositoryName: josaorg/safepass
   releaseName: safepass
-  buildArgs: MATOMO_URL=https://track.josa.ngo/, MATOMO_SITE_ID=15,
+  buildArgs: MATOMO_URL=https://track.josa.ngo/, MATOMO_SITE_ID=15
